# sk-mind

./: .env.example  .gitignore  README.md  docker-compose.yml
.agents/skills/api-interface-excel/: SKILL.md  gen_mro_full.py  gen_sales_full.py  gen_tools_split.py
.claudian/: claudian-settings.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run_dev.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_tables.py
backend/app/: main.py  seed.py
backend/app/api/: __init__.py  auth.py
backend/app/core/: config.py  database.py  deps.py  logging.py  security.py
backend/app/modules/auth/: models.py  schemas.py  services.py
backend/app/modules/data_sources/: models.py
backend/app/modules/datasets/: models.py
backend/app/modules/ingestion/: models.py
backend/app/modules/lineage/: models.py
backend/app/modules/quality/: models.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_models.py
deploy/nginx/: default.conf
docs/: ai-native-enterprise-data-platform-foundation-prd.md  ai-native-enterprise-data-platform-foundation-wireframe.md  ai-native-enterprise-data-platform-solution.md  ai-native-enterprise-data-platform-team-development-tasks.md  ai-native-enterprise-data-platform-technical-design.md  本体建模-业务对象全景图.md  本体建模-业务对象定义与数据映射.md  本体建模-语义关系与业务规则模板.md
docs/数据梳理/: 跨系统字段映射表.md
docs/本体建模/: Agent能力地图.md  业务对象全景图.md  原始系统数据需求清单.md
frontend/: package-lock.json  package.json
frontend/src/: style.css
scripts/: generate_srm_demo.py  generate_srm_sample.py  parse_srm.py
(+355 files in other folders)
