[project]
name = "sk-mind"
version = "0.1.0"
description = "AI 原生企业数据平台 — 面向中小型制造企业的可信数据底座与 Agent 数据服务"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
